qt/gen_qjsonvalue.nim

import Qt5Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Widgets")
{.compile("gen_qjsonvalue.cpp", cflags).}


type QJsonValueType* = cint
const
  QJsonValueNull* = 0
  QJsonValueBool* = 1
  QJsonValueDouble* = 2
  QJsonValueString* = 3
  QJsonValueArray* = 4
  QJsonValueObject* = 5
  QJsonValueUndefined* = 128



import gen_qjsonvalue_types
export gen_qjsonvalue_types

import
  gen_qjsonarray,
  gen_qjsonobject,
  gen_qvariant
export
  gen_qjsonarray,
  gen_qjsonobject,
  gen_qvariant

type cQJsonValue*{.exportc: "QJsonValue", incompleteStruct.} = object
type cQJsonValueRef*{.exportc: "QJsonValueRef", incompleteStruct.} = object
type cQJsonValuePtr*{.exportc: "QJsonValuePtr", incompleteStruct.} = object
type cQJsonValueRefPtr*{.exportc: "QJsonValueRefPtr", incompleteStruct.} = object

proc fcQJsonValue_new(): ptr cQJsonValue {.importc: "QJsonValue_new".}
proc fcQJsonValue_new2(b: bool): ptr cQJsonValue {.importc: "QJsonValue_new2".}
proc fcQJsonValue_new3(n: float64): ptr cQJsonValue {.importc: "QJsonValue_new3".}
proc fcQJsonValue_new4(n: cint): ptr cQJsonValue {.importc: "QJsonValue_new4".}
proc fcQJsonValue_new5(v: clonglong): ptr cQJsonValue {.importc: "QJsonValue_new5".}
proc fcQJsonValue_new6(s: struct_miqt_string): ptr cQJsonValue {.importc: "QJsonValue_new6".}
proc fcQJsonValue_new7(s: cstring): ptr cQJsonValue {.importc: "QJsonValue_new7".}
proc fcQJsonValue_new8(a: pointer): ptr cQJsonValue {.importc: "QJsonValue_new8".}
proc fcQJsonValue_new9(o: pointer): ptr cQJsonValue {.importc: "QJsonValue_new9".}
proc fcQJsonValue_new10(other: pointer): ptr cQJsonValue {.importc: "QJsonValue_new10".}
proc fcQJsonValue_new11(param1: cint): ptr cQJsonValue {.importc: "QJsonValue_new11".}
proc fcQJsonValue_operatorAssign(self: pointer, other: pointer): void {.importc: "QJsonValue_operatorAssign".}
proc fcQJsonValue_swap(self: pointer, other: pointer): void {.importc: "QJsonValue_swap".}
proc fcQJsonValue_fromVariant(variant: pointer): pointer {.importc: "QJsonValue_fromVariant".}
proc fcQJsonValue_toVariant(self: pointer, ): pointer {.importc: "QJsonValue_toVariant".}
proc fcQJsonValue_typeX(self: pointer, ): cint {.importc: "QJsonValue_type".}
proc fcQJsonValue_isNull(self: pointer, ): bool {.importc: "QJsonValue_isNull".}
proc fcQJsonValue_isBool(self: pointer, ): bool {.importc: "QJsonValue_isBool".}
proc fcQJsonValue_isDouble(self: pointer, ): bool {.importc: "QJsonValue_isDouble".}
proc fcQJsonValue_isString(self: pointer, ): bool {.importc: "QJsonValue_isString".}
proc fcQJsonValue_isArray(self: pointer, ): bool {.importc: "QJsonValue_isArray".}
proc fcQJsonValue_isObject(self: pointer, ): bool {.importc: "QJsonValue_isObject".}
proc fcQJsonValue_isUndefined(self: pointer, ): bool {.importc: "QJsonValue_isUndefined".}
proc fcQJsonValue_toBool(self: pointer, ): bool {.importc: "QJsonValue_toBool".}
proc fcQJsonValue_toInt(self: pointer, ): cint {.importc: "QJsonValue_toInt".}
proc fcQJsonValue_toDouble(self: pointer, ): float64 {.importc: "QJsonValue_toDouble".}
proc fcQJsonValue_toString(self: pointer, ): struct_miqt_string {.importc: "QJsonValue_toString".}
proc fcQJsonValue_toStringWithDefaultValue(self: pointer, defaultValue: struct_miqt_string): struct_miqt_string {.importc: "QJsonValue_toStringWithDefaultValue".}
proc fcQJsonValue_toArray(self: pointer, ): pointer {.importc: "QJsonValue_toArray".}
proc fcQJsonValue_toArrayWithDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QJsonValue_toArrayWithDefaultValue".}
proc fcQJsonValue_toObject(self: pointer, ): pointer {.importc: "QJsonValue_toObject".}
proc fcQJsonValue_toObjectWithDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QJsonValue_toObjectWithDefaultValue".}
proc fcQJsonValue_operatorSubscript(self: pointer, key: struct_miqt_string): pointer {.importc: "QJsonValue_operatorSubscript".}
proc fcQJsonValue_operatorSubscriptWithInt(self: pointer, i: cint): pointer {.importc: "QJsonValue_operatorSubscriptWithInt".}
proc fcQJsonValue_operatorEqual(self: pointer, other: pointer): bool {.importc: "QJsonValue_operatorEqual".}
proc fcQJsonValue_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QJsonValue_operatorNotEqual".}
proc fcQJsonValue_toBool1(self: pointer, defaultValue: bool): bool {.importc: "QJsonValue_toBool1".}
proc fcQJsonValue_toInt1(self: pointer, defaultValue: cint): cint {.importc: "QJsonValue_toInt1".}
proc fcQJsonValue_toDouble1(self: pointer, defaultValue: float64): float64 {.importc: "QJsonValue_toDouble1".}
proc fcQJsonValue_delete(self: pointer) {.importc: "QJsonValue_delete".}
proc fcQJsonValueRef_new(param1: pointer): ptr cQJsonValueRef {.importc: "QJsonValueRef_new".}
proc fcQJsonValueRef_new2(array: pointer, idx: cint): ptr cQJsonValueRef {.importc: "QJsonValueRef_new2".}
proc fcQJsonValueRef_new3(objectVal: pointer, idx: cint): ptr cQJsonValueRef {.importc: "QJsonValueRef_new3".}
proc fcQJsonValueRef_ToQJsonValue(self: pointer, ): pointer {.importc: "QJsonValueRef_ToQJsonValue".}
proc fcQJsonValueRef_operatorAssign(self: pointer, val: pointer): void {.importc: "QJsonValueRef_operatorAssign".}
proc fcQJsonValueRef_operatorAssignWithVal(self: pointer, val: pointer): void {.importc: "QJsonValueRef_operatorAssignWithVal".}
proc fcQJsonValueRef_toVariant(self: pointer, ): pointer {.importc: "QJsonValueRef_toVariant".}
proc fcQJsonValueRef_typeX(self: pointer, ): cint {.importc: "QJsonValueRef_type".}
proc fcQJsonValueRef_isNull(self: pointer, ): bool {.importc: "QJsonValueRef_isNull".}
proc fcQJsonValueRef_isBool(self: pointer, ): bool {.importc: "QJsonValueRef_isBool".}
proc fcQJsonValueRef_isDouble(self: pointer, ): bool {.importc: "QJsonValueRef_isDouble".}
proc fcQJsonValueRef_isString(self: pointer, ): bool {.importc: "QJsonValueRef_isString".}
proc fcQJsonValueRef_isArray(self: pointer, ): bool {.importc: "QJsonValueRef_isArray".}
proc fcQJsonValueRef_isObject(self: pointer, ): bool {.importc: "QJsonValueRef_isObject".}
proc fcQJsonValueRef_isUndefined(self: pointer, ): bool {.importc: "QJsonValueRef_isUndefined".}
proc fcQJsonValueRef_toBool(self: pointer, ): bool {.importc: "QJsonValueRef_toBool".}
proc fcQJsonValueRef_toInt(self: pointer, ): cint {.importc: "QJsonValueRef_toInt".}
proc fcQJsonValueRef_toDouble(self: pointer, ): float64 {.importc: "QJsonValueRef_toDouble".}
proc fcQJsonValueRef_toString(self: pointer, ): struct_miqt_string {.importc: "QJsonValueRef_toString".}
proc fcQJsonValueRef_toArray(self: pointer, ): pointer {.importc: "QJsonValueRef_toArray".}
proc fcQJsonValueRef_toObject(self: pointer, ): pointer {.importc: "QJsonValueRef_toObject".}
proc fcQJsonValueRef_toBoolWithDefaultValue(self: pointer, defaultValue: bool): bool {.importc: "QJsonValueRef_toBoolWithDefaultValue".}
proc fcQJsonValueRef_toIntWithDefaultValue(self: pointer, defaultValue: cint): cint {.importc: "QJsonValueRef_toIntWithDefaultValue".}
proc fcQJsonValueRef_toDoubleWithDefaultValue(self: pointer, defaultValue: float64): float64 {.importc: "QJsonValueRef_toDoubleWithDefaultValue".}
proc fcQJsonValueRef_toStringWithDefaultValue(self: pointer, defaultValue: struct_miqt_string): struct_miqt_string {.importc: "QJsonValueRef_toStringWithDefaultValue".}
proc fcQJsonValueRef_operatorEqual(self: pointer, other: pointer): bool {.importc: "QJsonValueRef_operatorEqual".}
proc fcQJsonValueRef_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QJsonValueRef_operatorNotEqual".}
proc fcQJsonValueRef_delete(self: pointer) {.importc: "QJsonValueRef_delete".}
proc fcQJsonValuePtr_new(val: pointer): ptr cQJsonValuePtr {.importc: "QJsonValuePtr_new".}
proc fcQJsonValuePtr_new2(param1: pointer): ptr cQJsonValuePtr {.importc: "QJsonValuePtr_new2".}
proc fcQJsonValuePtr_operatorMultiply(self: pointer, ): pointer {.importc: "QJsonValuePtr_operatorMultiply".}
proc fcQJsonValuePtr_operatorMinusGreater(self: pointer, ): pointer {.importc: "QJsonValuePtr_operatorMinusGreater".}
proc fcQJsonValuePtr_operatorAssign(self: pointer, param1: pointer): void {.importc: "QJsonValuePtr_operatorAssign".}
proc fcQJsonValuePtr_delete(self: pointer) {.importc: "QJsonValuePtr_delete".}
proc fcQJsonValueRefPtr_new(array: pointer, idx: cint): ptr cQJsonValueRefPtr {.importc: "QJsonValueRefPtr_new".}
proc fcQJsonValueRefPtr_new2(objectVal: pointer, idx: cint): ptr cQJsonValueRefPtr {.importc: "QJsonValueRefPtr_new2".}
proc fcQJsonValueRefPtr_new3(param1: pointer): ptr cQJsonValueRefPtr {.importc: "QJsonValueRefPtr_new3".}
proc fcQJsonValueRefPtr_operatorMultiply(self: pointer, ): pointer {.importc: "QJsonValueRefPtr_operatorMultiply".}
proc fcQJsonValueRefPtr_operatorMinusGreater(self: pointer, ): pointer {.importc: "QJsonValueRefPtr_operatorMinusGreater".}
proc fcQJsonValueRefPtr_operatorAssign(self: pointer, param1: pointer): void {.importc: "QJsonValueRefPtr_operatorAssign".}
proc fcQJsonValueRefPtr_delete(self: pointer) {.importc: "QJsonValueRefPtr_delete".}


func init*(T: type QJsonValue, h: ptr cQJsonValue): QJsonValue =
  T(h: h)
proc create*(T: type QJsonValue, ): QJsonValue =

  QJsonValue.init(fcQJsonValue_new())
proc create*(T: type QJsonValue, b: bool): QJsonValue =

  QJsonValue.init(fcQJsonValue_new2(b))
proc create*(T: type QJsonValue, n: float64): QJsonValue =

  QJsonValue.init(fcQJsonValue_new3(n))
proc create*(T: type QJsonValue, n: cint): QJsonValue =

  QJsonValue.init(fcQJsonValue_new4(n))
proc create*(T: type QJsonValue, v: clonglong): QJsonValue =

  QJsonValue.init(fcQJsonValue_new5(v))
proc create*(T: type QJsonValue, s: string): QJsonValue =

  QJsonValue.init(fcQJsonValue_new6(struct_miqt_string(data: s, len: csize_t(len(s)))))
proc create*(T: type QJsonValue, s: cstring): QJsonValue =

  QJsonValue.init(fcQJsonValue_new7(s))
proc create*(T: type QJsonValue, a: gen_qjsonarray.QJsonArray): QJsonValue =

  QJsonValue.init(fcQJsonValue_new8(a.h))
proc create2*(T: type QJsonValue, o: gen_qjsonobject.QJsonObject): QJsonValue =

  QJsonValue.init(fcQJsonValue_new9(o.h))
proc create2*(T: type QJsonValue, other: QJsonValue): QJsonValue =

  QJsonValue.init(fcQJsonValue_new10(other.h))
proc create2*(T: type QJsonValue, param1: QJsonValueType): QJsonValue =

  QJsonValue.init(fcQJsonValue_new11(cint(param1)))
proc operatorAssign*(self: QJsonValue, other: QJsonValue): void =

  fcQJsonValue_operatorAssign(self.h, other.h)

proc swap*(self: QJsonValue, other: QJsonValue): void =

  fcQJsonValue_swap(self.h, other.h)

proc fromVariant*(_: type QJsonValue, variant: gen_qvariant.QVariant): QJsonValue =

  QJsonValue(h: fcQJsonValue_fromVariant(variant.h))

proc toVariant*(self: QJsonValue, ): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQJsonValue_toVariant(self.h))

proc typeX*(self: QJsonValue, ): QJsonValueType =

  QJsonValueType(fcQJsonValue_typeX(self.h))

proc isNull*(self: QJsonValue, ): bool =

  fcQJsonValue_isNull(self.h)

proc isBool*(self: QJsonValue, ): bool =

  fcQJsonValue_isBool(self.h)

proc isDouble*(self: QJsonValue, ): bool =

  fcQJsonValue_isDouble(self.h)

proc isString*(self: QJsonValue, ): bool =

  fcQJsonValue_isString(self.h)

proc isArray*(self: QJsonValue, ): bool =

  fcQJsonValue_isArray(self.h)

proc isObject*(self: QJsonValue, ): bool =

  fcQJsonValue_isObject(self.h)
